# stm-chans-class

./: LICENSE.txt  README  TODO  stm-chans-class.cabal
src/Control/Concurrent/STM/: Chan.hs  ClosableChan.hs  ClosableQueue.hs  Queue.hs
