name:           stm-chans-class
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
License:        MIT
License-file:   LICENSE.txt
author:         Maximilian Rudolph

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   stm,
                   stm-chans
  ghc-options:     -O2
  other-modules:   Control.Concurrent.STM.Queue,
                   Control.Concurrent.STM.ClosableQueue
