name:           stm-chans-class
version:        0.2
cabal-version:  >=1.2
build-type:     Simple
License:        MIT
License-file:   LICENSE.txt
author:         Maximilian Rudolph


  
  
library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   stm,
                   stm-chans
  ghc-options:     -O2
  exposed-modules: Control.Concurrent.STM.Queue,
                   Control.Concurrent.STM.ClosableQueue,
                   Control.Concurrent.STM.Chan,
                   Control.Concurrent.STM.ClosableChan
  extra-source-files: README
                      TODO
  
